@@ -56,7 +56,8 @@ class DummyCatalog(Acquisition.Implicit):
     # This is sooooo ugly
 
     def unrestrictedTraverse(self, path, default=None):
-        assert path == '' # for these tests...
+        # for these tests...
+        assert path == '' or path == ('') or path == [''], path
         return self
 
     def restrictedTraverse(self, path, default=_marker):
@@ -66,7 +67,7 @@ class DummyCatalog(Acquisition.Implicit):
             ob = self._objs[path].__of__(self)
             ob.check()
             return ob
-        except (KeyError, Unauthorized):
+        except KeyError:
             if default is not _marker:
                 return default
             raise
@@ -86,60 +87,99 @@ class ConflictingCatalog(DummyCatalog):
     def getpath(self, rid):
         raise ConflictError
 
-class TestBrains(unittest.TestCase):
+class BrainsTestBase:
+
+    _old_flag = None
     
     def setUp(self):
         self.cat = DummyCatalog()
         self.cat.REQUEST = DummyRequest()
+        self._init_getOb_flag()
+
+    def tearDown(self):
+        if self._old_flag is not None:
+            self._restore_getOb_flag()
+
+    def _init_getOb_flag(self):
+        from Products.ZCatalog import CatalogBrains
+        self._old_flag = CatalogBrains.GETOBJECT_RAISES
+        CatalogBrains.GETOBJECT_RAISES = self._flag_value()
+
+    def _restore_getOb_flag(self):
+        from Products.ZCatalog import CatalogBrains
+        CatalogBrains.GETOBJECT_RAISES = self._old_flag
     
-    def makeBrain(self, rid):
+    def _makeBrain(self, rid):
         from Products.ZCatalog.CatalogBrains import AbstractCatalogBrain
         class Brain(AbstractCatalogBrain):
             __record_schema__ = {'test_field': 0, 'data_record_id_':1}
         return Brain(('test', rid)).__of__(self.cat)
-    
+
     def testHasKey(self):
-        b = self.makeBrain(1)
+        b = self._makeBrain(1)
         self.failUnless(b.has_key('test_field'))
         self.failUnless(b.has_key('data_record_id_'))
         self.failIf(b.has_key('godel'))
     
     def testGetPath(self):
-        b = [self.makeBrain(rid) for rid in range(3)]
+        b = [self._makeBrain(rid) for rid in range(3)]
         self.assertEqual(b[0].getPath(), '/conflicter')
         self.assertEqual(b[1].getPath(), '/happy')
         self.assertEqual(b[2].getPath(), '/secret')
     
     def testGetPathPropagatesConflictErrors(self):
         self.cat = ConflictingCatalog()
-        b = self.makeBrain(0)
+        b = self._makeBrain(0)
         self.assertRaises(ConflictError, b.getPath)
         
     def testGetURL(self):
-        b = self.makeBrain(0)
+        b = self._makeBrain(0)
         self.assertEqual(b.getURL(), 'http://superbad.com/conflicter')
     
     def testGetRID(self):
-        b = self.makeBrain(42)
+        b = self._makeBrain(42)
         self.assertEqual(b.getRID(), 42)
     
     def testGetObjectHappy(self):
-        b = self.makeBrain(1)
+        b = self._makeBrain(1)
         self.assertEqual(b.getPath(), '/happy')
         self.failUnless(b.getObject().aq_base is self.cat.getobject(1).aq_base)
     
     def testGetObjectPropagatesConflictErrors(self):
-        b = self.makeBrain(0)
+        b = self._makeBrain(0)
         self.assertEqual(b.getPath(), '/conflicter')
         self.assertRaises(ConflictError, b.getObject)
+
+class TestBrains(BrainsTestBase, unittest.TestCase):
     
+    def _flag_value(self):
+        return True
+
+    def testGetObjectRaisesUnauthorized(self):
+        from zExceptions import Unauthorized
+        b = self._makeBrain(2)
+        self.assertEqual(b.getPath(), '/secret')
+        self.assertRaises(Unauthorized, b.getObject)
+    
+    def testGetObjectRaisesNotFoundForMissing(self):
+        from zExceptions import NotFound
+        b = self._makeBrain(3)
+        self.assertEqual(b.getPath(), '/zonked')
+        self.assertRaises(KeyError, self.cat.getobject, 3)
+        self.assertRaises((NotFound, AttributeError, KeyError), b.getObject)
+    
+class TestBrainsOldBehavior(BrainsTestBase, unittest.TestCase):
+    
+    def _flag_value(self):
+        return False
+
     def testGetObjectReturnsNoneForUnauthorized(self):
-        b = self.makeBrain(2)
+        b = self._makeBrain(2)
         self.assertEqual(b.getPath(), '/secret')
         self.assertEqual(b.getObject(), None)
     
     def testGetObjectReturnsNoneForMissing(self):
-        b = self.makeBrain(3)
+        b = self._makeBrain(3)
         self.assertEqual(b.getPath(), '/zonked')
         self.assertRaises(KeyError, self.cat.getobject, 3)
         self.assertEqual(b.getObject(), None)        
@@ -147,6 +187,7 @@ class TestBrains(unittest.TestCase):
 def test_suite():
     suite = unittest.TestSuite()
     suite.addTest(unittest.makeSuite(TestBrains))
+    suite.addTest(unittest.makeSuite(TestBrainsOldBehavior))
     return suite
 
 if __name__ == '__main__':
