@@ -590,6 +590,8 @@ class PickySecurityManager:
 class TestZCatalogGetObject(unittest.TestCase):
     # Test what objects are returned by brain.getObject()
 
+    _old_flag = None
+
     def setUp(self):
         from Products.ZCatalog.ZCatalog import ZCatalog
         catalog = ZCatalog('catalog')
@@ -601,6 +603,17 @@ class TestZCatalogGetObject(unittest.TestCase):
 
     def tearDown(self):
         noSecurityManager()
+        if self._old_flag is not None:
+            self._restore_getObject_flag()
+    
+    def _init_getObject_flag(self, flag):
+        from Products.ZCatalog import CatalogBrains
+        self._old_flag = CatalogBrains.GETOBJECT_RAISES
+        CatalogBrains.GETOBJECT_RAISES = flag
+
+    def _restore_getObject_flag(self):
+        from Products.ZCatalog import CatalogBrains
+        CatalogBrains.GETOBJECT_RAISES = self._old_flag
 
     def test_getObject_found(self):
         # Check normal traversal
@@ -612,8 +625,47 @@ class TestZCatalogGetObject(unittest.TestCase):
         self.assertEqual(brain.getPath(), '/ob')
         self.assertEqual(brain.getObject().getId(), 'ob')
 
-    def test_getObject_missing(self):
+    def test_getObject_missing_raises_NotFound(self):
         # Check that if the object is missing None is returned
+        from zExceptions import NotFound
+        self._init_getObject_flag(True)
+        root = self.root
+        catalog = root.catalog
+        root.ob = Folder('ob')
+        catalog.catalog_object(root.ob)
+        brain = catalog.searchResults()[0]
+        del root.ob
+        self.assertRaises((NotFound, AttributeError, KeyError), brain.getObject)
+
+    def test_getObject_restricted_raises_Unauthorized(self):
+        # Check that if the object's security does not allow traversal,
+        # None is returned
+        from zExceptions import NotFound
+        self._init_getObject_flag(True)
+        root = self.root
+        catalog = root.catalog
+        root.fold = Folder('fold')
+        root.fold.ob = Folder('ob')
+        catalog.catalog_object(root.fold.ob)
+        brain = catalog.searchResults()[0]
+        # allow all accesses
+        pickySecurityManager = PickySecurityManager()
+        setSecurityManager(pickySecurityManager)
+        self.assertEqual(brain.getObject().getId(), 'ob')
+        # disallow just 'ob' access
+        pickySecurityManager = PickySecurityManager(['ob'])
+        setSecurityManager(pickySecurityManager)
+        self.assertRaises(Unauthorized, brain.getObject)
+        # disallow just 'fold' access
+        pickySecurityManager = PickySecurityManager(['fold'])
+        setSecurityManager(pickySecurityManager)
+        ob = brain.getObject()
+        self.failIf(ob is None)
+        self.assertEqual(ob.getId(), 'ob')
+
+    def test_getObject_missing_returns_None(self):
+        # Check that if the object is missing None is returned
+        self._init_getObject_flag(False)
         root = self.root
         catalog = root.catalog
         root.ob = Folder('ob')
@@ -622,9 +674,10 @@ class TestZCatalogGetObject(unittest.TestCase):
         del root.ob
         self.assertEqual(brain.getObject(), None)
 
-    def test_getObject_restricted(self):
+    def test_getObject_restricted_returns_None(self):
         # Check that if the object's security does not allow traversal,
         # None is returned
+        self._init_getObject_flag(False)
         root = self.root
         catalog = root.catalog
         root.fold = Folder('fold')
